Add experimentalHideEmptyCols prop to hide empty cols

--- a/react/Row.css
+++ b/react/Row.css
@@ -11,3 +11,8 @@
 .stretchChildrenWidth > *:not(img) {
   width: 100%;
 }
+
+/** Used for hiding empty columns */
+.col:empty {
+  display: none;
+}
